--- a/html/templates/activestatblock.html
+++ b/html/templates/activestatblock.html
@@ -3,7 +3,7 @@
 <div class="Source" data-bind="text: Source"></div>
 <div class="Type" data-bind="text: Type"></div>
 
-<hr />
+<svg xmlns="http://www.w3.org/2000/svg" class="icon horizrule"><use xlink:href="#horizrule"></use></svg>
 
 <!-- ko foreach: ['Traits','Actions','Reactions','LegendaryActions'] -->
 <div data-bind="if: $parent[$data].length, css: $data">
@@ -15,9 +15,10 @@
       <span data-bind="statblockText: Content"></span>
     </div>
   </div>
-  <hr />
 </div>
 <!-- /ko -->
+
+<svg xmlns="http://www.w3.org/2000/svg" class="icon horizrule"><use xlink:href="#horizrule"></use></svg>
 
 <div class="AC">
   <span class="label">Armor Class</span>
@@ -36,6 +37,8 @@
   <span data-bind="text: Speed.join(', ')"></span>
 </div>
 
+<svg xmlns="http://www.w3.org/2000/svg" class="icon horizrule"><use xlink:href="#horizrule"></use></svg>
+
 <div class="Abilities" data-bind="foreach: ['Str', 'Dex', 'Con', 'Int', 'Wis', 'Cha']">
   <div>
     <div class="label" data-bind="text: $data"></div>
@@ -45,8 +48,6 @@
     </div>
   </div>
 </div>
-
-<hr />
 
 <div class="modifiers" data-bind="foreach: ['Saves', 'Skills']">
   <div data-bind="visible: $parent[$data].length, css: $data">
