Differentiate between players and creatures in tracker

--- a/improved-initiative.less
+++ b/improved-initiative.less
@@ -256,6 +256,15 @@ input[type="file"] {
 
         width: 350px;
     }
+
+    .combatants {
+        .creature {
+            color: #7A200D;
+        }
+        .playercharacter {
+            color: #333;
+        }
+    }
 }
 
 .user-poll {
@@ -264,7 +273,6 @@ input[type="file"] {
 
 .libraries {
     .library-button {
-        border: 1px solid @primary-green;
         border-radius: @border-radius;
         padding: @small-spacer;
         margin: 1px;
